# genai-data-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: install.md  project_structure.md
notebooks/: 01-AGE90-api_key_gemini.ipynb  02-AGE90-sa_vertex.ipynb
src/genaianalysis/: credentials.py
src/genaianalysis/generate/: analysis.py
src/genaianalysis/utils/: paths.py
